tests/syntax_error/parentheses_embed_file.jou
global thing = embed_file "data.bin"  # Error: file name after embed_file must be in parentheses, e.g. embed_file("foo.txt")
